@@ -275,6 +275,7 @@ a list and a nat.
 * Sledgehammer:
   - Added "lam_trans" and "minimize" options.
   - Renamed "slicing" ("no_slicing") option to "slice" ("dont_slice").
+  - Renamed "sound" option to "strict".
 
 * Metis:
   - Added possibility to specify lambda translations scheme as a
